0.8.0 - currently working on
- [#4167] Feature: Add Mapper_FrontEndUser::findByUserName
- [#4161] Feature: Add some getters and setters to the FE user model
- [#4160] Feature: Add Model_FrontEndUser::getJobTitle and ::hasJobTitle
- [#2628] Feature: Add a function frontEndLoginManager::loginUser
- [#4132] Feature: Add a class with time constants
- [#4129] Fix: Decimals of geo coordinates are cut off in the DB
- [#3248] Fix: A model without UID should automatically be dirty after setData
- [#4111] Fix: tx_oelib_List::sort needs to make the list dirty
- [#4095] Fix: Wrong documentation comment for tx_oelib_ConfigurationRegistry::get
- [#4125] Fix: Check all class_exists for the correct use of the autoload flag
- [#4128] Change: Improve the exception text about missing subparts
- [#4121] Feature: Add a function Geocoding_Calculator::filterByDistance
- [#4047] Cleanup: Rename all test classes from *_testcase to *Test
- [#4094] Fix: Use empty configurations in the unit tests
- [#4080] Fix: Memory-only models must not try to load IRRE relations from database
- [#4056] Feature: Add List::at
- [#4055] Feature: Add a Sortable interface
- [#4030] Feature: Add a function for calculating the distance between two geo objects
- [#4053] Feature: Add Model::setPageUid
- [#2049] Cleanup: Drop our copy of t3lib_div::rmdir
- [#3984] Feature: Add countByWhereClause() and countByPageUid() to the DataMapper
- [#3983] Feature: Add LIMIT to findByPageUid()
- [#3981] Feature: Add LIMIT to findByWhereClause()
- [#3957] Change: tx_oelib_MapperRegistry should use class_exists() with autoload = TRUE instead of calling our own autoloader
- [#3927] Fix: Message in system log: Unable to autoload class "pear"
- [#3921] Fix: Crash in the List testcase in PHP 5.2 after the switch to SplObjectStorage
- [#3870] Change: tx_oelib_List should use an SplObjectStorage
- [#3854] Fix: 1:n IRRE relations need to drop extension prefixes in SQL column names
- [#3812] Feature: Provide a geocoding service